--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -18,15 +18,41 @@
     <nav class="navbar navbar-light bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Alex S. Capstone Project</a>
+                <a class="navbar-brand" href="#">Alex S. Dealership Review</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <div class="d-flex flex-row">
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:about' %}" >About Us</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:contact' %}" >Contact Us</a>
+                    </li>
+                    <li>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {{ user.first_name }}({{ user.username }})
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Sign Out</a>
+                            </div>
+                        </div>
+                    </li>
+                </div>
+                {% else %}
                 <li>
-                    <a class="btn btn-link" href="{% url 'djangoapp:about' %}" >About Us</a>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:register' %}" >Sign Up</a>
+                        </div>
+                    </form>
                 </li>
-                <li>
-                    <a class="btn btn-link" href="{% url 'djangoapp:contact' %}" >Contact Us</a>
-                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
