--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -8,10 +8,72 @@
 </head>
 
     <body>
-
     <!--Add a nav bar here -->
-
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Alex S. Dealership Review</a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <div class="d-flex flex-row">
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:add_review' dealer_id %}" >Add Review</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:about' %}" >About Us</a>
+                    </li>
+                    <li>
+                        <a class="btn btn-link" href="{% url 'djangoapp:contact' %}" >Contact Us</a>
+                    </li>
+                    <li>
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {{ user.first_name }}({{ user.username }})
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="btn btn-link" href="{% url 'djangoapp:logout' %}">Sign Out</a>
+                            </div>
+                        </div>
+                    </li>
+                </div>
+                {% else %}
+                <li>
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                        {% csrf_token %}
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Username" name="username" >
+                            <input type="password" class="form-control" placeholder="Password" name="psw" >
+                            <button class="btn btn-primary" type="submit">Login</button>
+                            <a class="btn btn-link" href="{% url 'djangoapp:register' %}" >Sign Up</a>
+                        </div>
+                    </form>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
     <!-- Add reviews as cards -->
+    <div class="card-columns">
+        {% for review in reviews %}
+        <div class="card bg-light mb-3">
+            <div class="card-header">
+                {% if review.sentiment == 'positive' %}
+                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/positive.png" width="30">
+                {% elif review.sentiment == 'neutral' %}
+                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/neutral.png" width="30">
+                {% elif review.sentiment == 'negative' %}
+                <img class="card-img-left" src="{{MEDIA_URL}}/emoji/negative.png" width="30">
+                {% endif %}
+            </div>
+            <div class="card-body">
+                <div class="card-title"><b>{{review.car_make}}, {{review.car_model}}</b></div>
+                <div class="card-title">{{review.car_year}}</div>
+                <div class="card-text">{{review.review}}</div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 
     </body>
 
